[tool.poetry]
name = "streamlitgpt"
version = "0.1.0"
description = ""
authors = ["Yann Straub <ystraub@ippontech.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
llama-index = "^0.10.45"
llama-index-llms-groq = "^0.1.4"
groq = "^0.9.0"
llama-index-llms-mistralai = "^0.1.15"
pypdf = "^4.2.0"
pip = "^24.0"
install = "^1.3.5"
llama-index-readers-smart-pdf-loader = "^0.1.4"
lm-format-enforcer = "^0.10.2"
llama-cpp-python = "^0.2.78"
llama-index-program-guidance = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
